--- a/frontend/src/components/Welcome/index.scss
+++ b/frontend/src/components/Welcome/index.scss
@@ -1,48 +1,57 @@
-.welcome {
-    width: 50vw;
-    margin-top: 15vh;
-    margin-left: 25vw;
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Tektur:wght@400..900&display=swap');
 
-    p {
-        font-size: 5vh;
+.welcome {
+    font-family: "Cinzel Decorative", cursive;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-image: url("../asset/welcome1.jpg"); /* Adjust the path if necessary */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: black; /* Updated color */
+    text-align: center;
+    font-size: 24px;
+
+    h1 {
+        position: relative;
+        background-color: rgba(255, 255, 255, 0.5);
+        padding: 5px;
+        border-radius: 20px;
+        bottom: 275px;
     }
 
-    div {
-        position: relative;
+    input:focus {
+        outline: none;
+    }
+
+    button:focus {
+        outline: none;
     }
 
     button {
-        font-family: "Cinzel Decorative", serif;
-        font-weight: 700;
-        font-style: normal;
-        background: rgb(241, 236, 227);
-        border-radius: 2vh;
-        margin: 2vh;
-        padding: 5vh;
-        border: none;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-            rgba(0, 0, 0, 0.23) 0px 3px 6px;
-        font-size: 4vh;
-        width: 20vw;
-        height: 20vh;
-        margin-left: 15vw;
-        margin-top: 5vh;
-        text-indent: 2.5vw;
-        line-height: 10vh;
-    }
-    
-    button:active {
-        background: rgb(233, 228, 217);
+        font-family: "Cinzel Decorative", cursive;
+        padding: 10px 20px;
+        font-size: 24px;
+        background-color: #632539;
     }
 
-    .login, .signup {
-        text-indent: 3vw;
+    button:hover {
+        background-color: #632539;
     }
 
-    .login:hover, .signup:hover {
-        background: rgb(255, 255, 237);
-        transform: scale(1.05);
-        box-shadow: rgba(0,0,0,0.2) 0px 5px 10px,
-            rgba(0,0,0,0.19) 0px 5px 10px;
+    .dropdown-container {
+        position: relative;
+        display: inline-block;
+        width: 15%;
+        background: linear-gradient(-135deg, rgba(25, 39, 63, 0.5) 0%, rgba(255, 255, 255, 0.5) 100%);
+        border-radius: 10px;
+        padding: 20px;
+        padding-bottom: 30px;
+        top: 0px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        
     }
 }
