--- a/frontend/src/components/DMView/index.scss
+++ b/frontend/src/components/DMView/index.scss
@@ -777,6 +777,7 @@ input[name="monster-spd"]:focus {
   display: flex;
   width: 20vw;
   gap: 1vw;
+  z-index: 3;
 }
 
 /* ================================================
