--- a/frontend/src/components/DMView/index.scss
+++ b/frontend/src/components/DMView/index.scss
@@ -8,7 +8,7 @@
   background: rgb(200, 180, 152);
   height: 100vh;
   width: 50vw;
-  margin-top: -101vh;
+  bottom: 0px;
   resize: horizontal;
   position: absolute;
   overflow: auto;
@@ -297,10 +297,12 @@ form {
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
         cursor: pointer;
         transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+        border-radius: 50%;
         
         &:hover {
           transform: scale(1.05);
           box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+          border-radius: 50%;
         }
       }
       
@@ -327,6 +329,7 @@ form {
       background: none;
       border: none;
       transition: transform 0.2s ease-in-out;
+      border-radius: 50%;
       
       &:hover {
         transform: scale(1.05);
@@ -337,13 +340,13 @@ form {
     }
   
     .add-map-img {
-      width: 40vh;
+      width: 30vh;
       outline: none;
       z-index: 11;
       position: relative;
       transition: box-shadow 0.2s ease-in-out;
       border: none;
-      border-radius: 0;
+      border-radius: 50%;
     }
     
     .hidden-file-input {
