--- a/frontend/src/components/GameView/index.scss
+++ b/frontend/src/components/GameView/index.scss
@@ -870,6 +870,8 @@ input {
     .map-large {
         max-width: 100%;
         max-height: 100%;
+        width: 100%;
+        height: 100%;
         display: block;
         object-fit: contain;
         box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
